platform/grafana/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: grafana
spec:
  selector:
    app: grafana
  ports:
    - name: http-grafana
      protocol: TCP
      port: 3000
      targetPort: http-grafana
